# rust-k8s-test

./: Cargo.toml  Dockerfile  README.md  job.yaml
src/: main.rs
