[package]
name = "rust-k8s-test"
version = "0.1.0"
authors = ["Ross Fairbanks <ross@rossfairbanks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.4.0" }
k8s-openapi = { version = "0.12.0", features = ["v1_20"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = { version = "2.1.0" }
